<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    >

    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_2"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="40sp" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/sign_up"
        android:hint="@string/name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/name"
        android:hint="@string/email"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/cnf_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/password"
        android:hint="@string/cnf_password"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/cnf_pass"
        android:hint="@string/phone"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:inputType="phone"
        />

    <LinearLayout
        android:id="@+id/login_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_q"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- little space between the two -->
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:background="@drawable/btn_bg"
        android:layout_below="@id/login_group"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        />
</RelativeLayout>