<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_2"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/home"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/avl_cars"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:layout_centerInParent="true"
        android:text="@string/avl_cars"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        />
    <Button
        android:id="@+id/history"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/avl_cars"
        android:layout_centerInParent="true"
        android:text="@string/history"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        />
    <Button
        android:id="@+id/profile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/history"
        android:layout_centerInParent="true"
        android:text="@string/profile"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        />
    <Button
        android:id="@+id/settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_centerInParent="true"
        android:text="@string/settings"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        />
    <Button
        android:id="@+id/about_us"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:layout_centerInParent="true"
        android:text="@string/about_us"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        />
    <Button
        android:id="@+id/contact_us"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_us"
        android:layout_centerInParent="true"
        android:text="@string/contact_us"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:background="@drawable/btn_home"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        />
</RelativeLayout>
