<ScrollView
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/settings_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo_2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/txt_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/settings"
            android:textColor="@color/blue"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_below="@id/logo_2"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang"
            android:text="@string/lang"
            android:layout_below="@id/txt_settings"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_grp_lang"
            android:layout_below="@id/lang"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            >
            <RadioButton
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Eng"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
            <RadioButton
                android:id="@+id/arb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Arabic"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/theme"
            android:text="@string/Theme"
            android:layout_below="@id/radio_grp_lang"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"

            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_grp_theme"
            android:layout_below="@id/theme"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            >
            <RadioButton
                android:id="@+id/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dark"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
            <RadioButton
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Light"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency"
            android:text="@string/currency"
            android:layout_below="@id/radio_grp_theme"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_grp_currency"
            android:layout_below="@id/currency"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            >
            <RadioButton
                android:id="@+id/usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
            <RadioButton
                android:id="@+id/nis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nis"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="20dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/btn_bg"
            android:layout_below="@id/radio_grp_currency"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            />
    </RelativeLayout>
</ScrollView>
