<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_2"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/signup_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_q"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- little space between the two -->
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:background="@drawable/btn_bg"
        android:layout_below="@id/signup_group"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="60dp"
        />
</RelativeLayout>