<RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/txt_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/about_us"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@id/logo_2"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_about_us"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/about_us_txt"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:textSize="26sp"
        android:textStyle="italic|bold"
        android:textColor="@color/blue"
        android:text="@string/names"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:textColor="@color/red"
        android:text="@string/college"
        android:layout_marginHorizontal="20dp"
        />
</RelativeLayout>